Fixes story 25901371 - display logo even when user is logged out.  Modified styling to handle proper logo display when header menu is not displayed.  Modified styling to not allow overly large custom logos to overflow and disrupt layout.

--- a/webapp/public/stylesheets/structure.css
+++ b/webapp/public/stylesheets/structure.css
@@ -9,6 +9,15 @@ body {
   background-color: #090;
   z-index: 800; }
 
+  #head td#logo-container {
+      /* Keeps logo in position when header menu is not displayed  */
+      height: 58px; 
+      
+      /* Prevents overly large custom logos from disrupting layout */
+      overflow-y: hidden;
+      position: fixed;
+    }
+
 #bar {
   position: fixed;
   top: 68px;
@@ -48,7 +57,7 @@ body {
 
 #rot {
   width: 100%;
-  float: left;
+  table float: left;
   margin-right: -220px; }
 
 table {
@@ -211,4 +220,4 @@ legend {
   background-color: #fff; }
 
 .ui-icon {
-  display: inline-block !important; }
+  display: inline-block !important; } 
